ords/OrdsIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oracle
  namespace: oracle
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ords
                port:
                  number: 8181
